Vote button stays lit, fix chart z-index

--- a/static/style5/_chart.scss
+++ b/static/style5/_chart.scss
@@ -17,7 +17,6 @@ div.chart_outside {
 
         span.chart_label {
             position: absolute;
-            z-index: 1;
             max-width: 100%;
             overflow: hidden;
             @include transform(translateX(4px));
